--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "author": "Jose Quispirina",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^5.0.0",
     "nodemon": "^3.1.7",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2"
+  },
+  "dependencies": {
+    "express": "^4.21.2"
   }
 }
