--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --exec npx tsx src/index.ts",
-    "test": "NODE_ENV=test jest --detectOpenHandles",
+    "test": "jest --detectOpenHandles",
     "test:coverage": "npm run pretest && jest --detectOpenHandles --coverage",
-    "pretest": "NODE_ENV=test npx tsx src/data --clear"
+    "pretest": "npx tsx src/data --clear"
   },
   "author": "Jose Quispirina",
   "license": "ISC",
