--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,8 @@
     "moduleResolution": "NodeNext",                     /* Specify how TypeScript looks up a file from a given module specifier. */
 
     /* Emit */
-    "declaration": true,                              /* Generate .d.ts files from TypeScript and JavaScript files in your project. */
-    "sourceMap": true,                                /* Create source map files for emitted JavaScript files. */
+    "declaration": false,                              /* Generate .d.ts files from TypeScript and JavaScript files in your project. */
+    "sourceMap": false,                                /* Create source map files for emitted JavaScript files. */
     "outDir": "./dist/",                                   /* Specify an output folder for all emitted files. */
 
     /* Interop Constraints */
@@ -23,4 +23,5 @@
     "strict": true,                                      /* Enable all strict type-checking options. */
   },
   "include": ["src/**/*.ts"],
+  "exclude": ["src/**/*.test.ts"],
 }
