Se establecia logica de CORS con Jest y SuperTest

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,5 @@
     "strict": true,                                      /* Enable all strict type-checking options. */
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["src/**/*.test.ts"],
+  "exclude": ["src/**/*.test.ts"], /* Exclude test files from compilation */
 }
